--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@unform/core": "^2.1.6",
+    "axios": "^0.25.0",
     "git-cz": "^4.8.0",
+    "history": "^5.2.0",
     "next": "12.0.10",
+    "polished": "^4.1.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-input-mask": "^2.0.4",
+    "react-modal": "^3.14.4",
+    "react-popup": "^0.10.0",
+    "react-redux": "^7.2.6",
+    "react-select": "^5.2.2",
+    "react-toastify": "^8.1.1",
+    "reactjs-popup": "^2.0.5",
+    "reactotron-react-js": "^3.3.7",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "@types/react-modal": "^3.13.1",
+    "@types/styled-components": "^5.1.22",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "typescript": "4.5.5"
