--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,9 @@
   "devDependencies": {
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "@types/react-input-mask": "^3.0.1",
     "@types/react-modal": "^3.13.1",
+    "@types/react-select": "^5.0.1",
     "@types/styled-components": "^5.1.22",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
