--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.25.0",
     "git-cz": "^4.8.0",
     "history": "^5.2.0",
+    "immer": "^9.0.12",
     "next": "12.0.10",
     "polished": "^4.1.4",
     "react": "17.0.2",
